Retos Reversing Parte 3 subidos
2 Retos Resueltos

--- a/picoCTF/Reversing/Retos Reversing - Parte 3/01-asm1.md
+++ b/picoCTF/Reversing/Retos Reversing - Parte 3/01-asm1.md
@@ -3,8 +3,53 @@ What does asm1(0x2e0) return? Submit the flag as a hexadecimal value (starting w
 
 ## Solución
 ```bash
-
+❯ cat test.S
+───────┬──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
+       │ File: test.S
+───────┼──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
+   1   │ asm1:
+   2   │     <+0>:   push   ebp
+   3   │     <+1>:   mov    ebp,esp
+   4   │     <+3>:   cmp    DWORD PTR [ebp+0x8],0x3fb
+   5   │     <+10>:  jg     0x512 <asm1+37>
+   6   │     <+12>:  cmp    DWORD PTR [ebp+0x8],0x280
+   7   │     <+19>:  jne    0x50a <asm1+29>
+   8   │     <+21>:  mov    eax,DWORD PTR [ebp+0x8]
+   9   │     <+24>:  add    eax,0xa
+  10   │     <+27>:  jmp    0x529 <asm1+60>
+  11   │     <+29>:  mov    eax,DWORD PTR [ebp+0x8]
+  12   │     <+32>:  sub    eax,0xa
+  13   │     <+35>:  jmp    0x529 <asm1+60>
+  14   │     <+37>:  cmp    DWORD PTR [ebp+0x8],0x559
+  15   │     <+44>:  jne    0x523 <asm1+54>
+  16   │     <+46>:  mov    eax,DWORD PTR [ebp+0x8]
+  17   │     <+49>:  sub    eax,0xa
+  18   │     <+52>:  jmp    0x529 <asm1+60>
+  19   │     <+54>:  mov    eax,DWORD PTR [ebp+0x8]
+  20   │     <+57>:  add    eax,0xa
+  21   │     <+60>:  pop    ebp
+  22   │     <+61>:  ret    
+  23   │ 
+───────┴──────────────────────────────────────────────────────────────────
 ```
+probamos en python:
+```bash
+❯ python3
+Python 3.12.3 (main, Sep 11 2024, 14:17:37) [GCC 13.2.0] on linux
+Type "help", "copyright", "credits" or "license" for more information.
+>>> 0x559 > 0x559
+False
+>>> 0x559 > 0x2e0
+True
+>>> 0x559 != 0x2e0
+True
+>>> 0x2e0 - 0xa
+726
+>>> hex(0x2e0 - 0xa)
+'0x2d6'
+>>> 
+```
+0x2d6 es la flag
 
 ## Notas Adicionales
 
