--- a/picoCTF/Reversing/Retos Reversing - Parte 3/02-asm1.md
+++ b/picoCTF/Reversing/Retos Reversing - Parte 3/02-asm1.md
@@ -3,9 +3,40 @@ What does asm2(0x4,0x21) return? Submit the flag as a hexadecimal value (startin
 
 ## Solución
 ```bash
+catn test2.S
+asm2:
+	<+0>:	push   ebp
+	<+1>:	mov    ebp,esp
+	<+3>:	sub    esp,0x10
+	<+6>:	mov    eax,DWORD PTR [ebp+0xc]
+	<+9>:	mov    DWORD PTR [ebp-0x4],eax
+	<+12>:	mov    eax,DWORD PTR [ebp+0x8]
+	<+15>:	mov    DWORD PTR [ebp-0x8],eax
+	<+18>:	jmp    0x509 <asm2+28>
+	<+20>:	add    DWORD PTR [ebp-0x4],0x1
+	<+24>:	add    DWORD PTR [ebp-0x8],0x74
+	<+28>:	cmp    DWORD PTR [ebp-0x8],0xfb46
+	<+35>:	jle    0x501 <asm2+20>
+	<+37>:	mov    eax,DWORD PTR [ebp-0x4]
+	<+40>:	leave  
+	<+41>:	ret    
 
 ```
+utilizamos este codigo y nos da la flag:
+```python
+# Valores iniciales
+e4 = int('0x21', 16)  # Inicialización de ebp-0x4
+e8 = int('0x4', 16)   # Inicialización de ebp-0x8
 
+# Ciclo hasta que e8 supere el límite de 0xfb46
+while e8 <= int('0xfb46', 16):
+    e4 += int('0x1', 16)    # Incremento de ebp-0x4
+    e8 += int('0x74', 16)   # Incremento de ebp-0x8
+
+# Resultado final en formato hexadecimal
+print(hex(e4))
+```
+flag: 0x24c
 ## Notas Adicionales
 
 
